<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99FFFF"
    tools:context=".MainActivity">

    <!-- Ảnh logo ngôi nhà -->
    <ImageView
        android:id="@+id/imgHome"
        android:layout_width="279dp"
        android:layout_height="189dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/home_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app" />

    <!-- Nút Đọc văn bản -->

    <!-- Nút Điều hướng -->

    <LinearLayout
        android:id="@+id/btnReadText"
        android:layout_width="381dp"
        android:layout_height="106dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/home_icon"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgHome">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tts_button"
            android:textColor="#E6FFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <ImageView
            android:layout_width="64dp"
            android:layout_height="63dp"
            android:contentDescription="@string/tts_button"
            android:src="@drawable/sound" />
    </LinearLayout>

    <!-- Nút Cài đặt -->
    <LinearLayout
        android:id="@+id/btnNavigate"
        android:layout_width="381dp"
        android:layout_height="110dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/home_icon"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnReadText">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nav_button"
            android:textColor="#E6FFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="73dp"
            android:layout_height="63dp"
            android:contentDescription="@string/nav_button"
            android:src="@drawable/micro" />
    </LinearLayout>

    <!-- Nút Trợ giúp -->

    <LinearLayout
        android:id="@+id/btnSettings"
        android:layout_width="383dp"
        android:layout_height="108dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/home_icon"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNavigate">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_button"
            android:textColor="#E6FFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:contentDescription="@string/setting_button"
            android:src="@drawable/settings" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnHelp"
        android:layout_width="380dp"
        android:layout_height="104dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/home_icon"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSettings"
        app:layout_constraintVertical_bias="0.093">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/help_button"
            android:textColor="#E6FFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="65dp"
            android:layout_height="66dp"
            android:contentDescription="@string/help_button"
            android:src="@drawable/customer_service" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
